--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,8 @@
+ * lumiere sur les bullets
  * canon triple (tire dans 3 directions)
  * quand beast meurt -> chance qu'il y ai pickup a choper
+ 
+ 
+### Optimisations ###
+ * object pool
+ * bullet -> triggers sans rigidbody
